--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "print-hyperscale",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "main.js",
   "scripts": {
@@ -12,7 +12,8 @@
   },
   "keywords": [
     "console",
-    "simple"
+    "simple",
+    "print"
   ],
   "author": "luca@hyperscripts.co",
   "license": "MIT",
